[gd_scene load_steps=24 format=3 uid="uid://cbbtldqso3u1l"]

[ext_resource type="Script" uid="uid://c7o8rrut6uxyh" path="res://scripts/enemy.gd" id="1_md0e3"]
[ext_resource type="Texture2D" uid="uid://cuhv6tm4k2yd1" path="res://assets/sprites/characters/slime.png" id="2_4ra3w"]
[ext_resource type="PackedScene" uid="uid://fpwhe2d0splb" path="res://scenes/health_bar.tscn" id="3_4ra3w"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5uy6h"]
atlas = ExtResource("2_4ra3w")
region = Rect2(0, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4w8v"]
atlas = ExtResource("2_4ra3w")
region = Rect2(32, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwavj"]
atlas = ExtResource("2_4ra3w")
region = Rect2(64, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nenq2"]
atlas = ExtResource("2_4ra3w")
region = Rect2(96, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_md484"]
atlas = ExtResource("2_4ra3w")
region = Rect2(128, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ipns3"]
atlas = ExtResource("2_4ra3w")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qclf"]
atlas = ExtResource("2_4ra3w")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8i8w"]
atlas = ExtResource("2_4ra3w")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_otmr2"]
atlas = ExtResource("2_4ra3w")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_md0e3"]
atlas = ExtResource("2_4ra3w")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ra3w"]
atlas = ExtResource("2_4ra3w")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtq4b"]
atlas = ExtResource("2_4ra3w")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0cyh"]
atlas = ExtResource("2_4ra3w")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0wcc"]
atlas = ExtResource("2_4ra3w")
region = Rect2(128, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1ycm"]
atlas = ExtResource("2_4ra3w")
region = Rect2(160, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_shcg2"]
atlas = ExtResource("2_4ra3w")
region = Rect2(192, 224, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_2pwtc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uy6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4w8v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwavj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nenq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md484")
}],
"loop": false,
"name": &"die",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipns3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qclf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8i8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otmr2")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_md0e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ra3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtq4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0cyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0wcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1ycm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shcg2")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_rogs8"]
radius = 69.0072

[sub_resource type="CircleShape2D" id="CircleShape2D_wrm80"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_md0e3"]
radius = 17.0

[node name="enemy" type="CharacterBody2D"]
collision_layer = 17
script = ExtResource("1_md0e3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2pwtc")
animation = &"walk"
frame_progress = 0.444806

[node name="detection" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection"]
shape = SubResource("CircleShape2D_rogs8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_wrm80")

[node name="attack" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_md0e3")

[node name="health_bar" parent="." instance=ExtResource("3_4ra3w")]
offset_left = -16.0
offset_top = -20.0
offset_right = 15.0
offset_bottom = -11.0

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="detection" to="." method="_on_detection_body_entered"]
[connection signal="body_exited" from="detection" to="." method="_on_detection_body_exited"]
[connection signal="body_entered" from="attack" to="." method="_on_attack_body_entered"]
